<resources>
    <string name="app_name">My fruit App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ผู้ใช้งาน</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_Cart">Cart</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_Account">Account</string>
    <string name="My_Fruitilla_App">My Fruitilia App</string>
    <string name="hello_start_exploring_our_store">hello! start exploring our store</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="email_address">Email-Address</string>
    <string name="password">Password</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>