<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myfruitapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.myfruitapp.ui.cart.GalleryFragment"
        android:label="@string/menu_Cart"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.myfruitapp.ui.account.SlideshowFragment"
        android:label="@string/menu_Account"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/fragment_payment"
        android:name="com.example.myfruitapp.fragment_payment"
        android:label="fragment_payment"
        tools:layout="@layout/fragment_payment" />
</navigation>